# GammaBot

./: .gitignore  readme.md
dependencies/: ros_pkg_list.txt  setup.sh
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/astra_camera/: AstraConfig.h
devel/lib/astra_camera/: astra_camera_node  list_devices_node
src/: prediction  prediction_rosbot
src/cnn_image_processing/: CMakeLists.txt  depth_img.py  package.xml  prediction_rosbot.py
src/cnn_image_processing/depth_tests/: depth_distance_realtime.py  depth_distance_static.py  depth_img.py
src/cnn_image_processing/launch/: cnn.launch
src/cnn_image_processing/msg/: ArucoCornerCoordinates.msg  ArucoDistOri.msg
src/cnn_image_processing/rviz/: cnn.rviz
src/cnn_image_processing/scripts/: AR.py  AR_node.py  AR_node_aruco_positions.py  Entrenamiento_CNN.py  depth_node.py  llamada_modelo_CNN.py  prediction_node.py
src/cnn_image_processing/scripts/runs/detect/yolov8n_custom/: results.csv
src/descentralized_bringup/: CMakeLists.txt  package.xml
src/gamepad_control/: CMakeLists.txt  package.xml
src/gamepad_control/launch/: control_mando.launch
src/gamepad_control/src/: joy_to_cmd_vel.cpp
src/map_marker/: CMakeLists.txt  package.xml
src/map_marker/launch/: map_marker.launch
src/map_marker/rviz/: integrated_test.rviz  map_marker.rviz  marker_pred_camera_test.rviz  move_base.rviz  slam_marker.rviz
src/map_marker/src/: map_marker.cpp  marker_tf_broadcaster.cpp
src/robot_gui_bridge/: package.xml
src/rplidar_ros/: CMakeLists.txt
src/tutorial_pkg/: CMakeLists.txt
(+52 files in other folders)
